--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
       - https://tsuyopon.xyz/learning-contents/web-dev/css/how-to-use-the-bootstrap-css/
   -->
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <!--
     やること:
       - ナビゲーションバーをセットする
@@ -31,24 +34,26 @@
     参考:
       - https://tsuyopon.xyz/learning-contents/web-dev/css/how-to-use-navbar-in-the-bootstrap-css/
   -->
-  <nav>
-    <a href="#">マイアルバム</a>
-    <button>
-      <span></span>
+  <nav class="navbar navbar-expand-sm navbar-dark bg-danger">
+    <a  class="navbar-brand" href="#">
+      マイアルバム
+    </a>
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
     </button>
-    <div>
-      <ul>
-        <li>
-          <a href="#">最新</a>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">最新</a>
         </li>
-        <li>
-          <a href="#">日常</a>
+        <li class="nav-item">
+          <a class="nav-link" href="#">日常</a>
         </li>
-        <li>
-          <a href="#">動物</a>
+        <li class="nav-item">
+          <a class="nav-link" href="#">動物</a>
         </li>
-        <li>
-          <a href="#">風景(準備中)</a>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">風景(準備中)</a>
         </li>
       </ul>
     </div>
@@ -73,40 +78,41 @@
       - https://tsuyopon.xyz/learning-contents/web-dev/css/how-to-use-navbar-in-the-bootstrap-css-part-1/
       - https://tsuyopon.xyz/learning-contents/web-dev/css/how-to-use-navbar-in-the-bootstrap-css-part-2/
   -->
+  
   <div class="img-gallery">
-    <div>
-      <div>
-        <div>
+    <div class="row">
+      <div class="px-5-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="img-thumbnail">
           <img src="https://www.pakutaso.com/shared/img/thumb/TOMheuaDSC01992_TP_V1.jpg">
           <p class="img-title">ヘウーッ（猫）</p>
         </div>
       </div>
-      <div>
-        <div>
+      <div class="px-5-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="img-thumbnail">
           <img src="https://www.pakutaso.com/shared/img/thumb/TOMnemuiDSC01757_TP_V1.jpg">
           <p class="img-title">今日も一日頑張ったにゃん</p>
         </div>
       </div>
-      <div>
+      <div class="px-5-12 col-sm-6 col-md-4 col-lg-3">
         <div class="img-thumbnail">
           <img src="https://www.pakutaso.com/shared/img/thumb/TOMcatDSC02022_TP_V1.jpg">
           <p class="img-title">何か用ですか？（猫）</p>
         </div>
       </div>
-      <div>
+      <div class="px-5-12 col-sm-6 col-md-4 col-lg-3">
         <div class="img-thumbnail">
           <img src="https://www.pakutaso.com/shared/img/thumb/TOMcatDSC02346_TP_V1.jpg">
           <p class="img-title">怖がる猫</p>
         </div>
       </div>
-      <div>
-        <div>
+      <div class="px-5-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="img-thumbnail">
           <img src="https://www.pakutaso.com/shared/img/thumb/TOMcatDSC01994_TP_V1.jpg">
           <p class="img-title">猫の怒りのサイン</p>
         </div>
       </div>
-      <div>
-        <div>
+      <div class="px-5-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="img-thumbnail">
           <img src="https://www.pakutaso.com/shared/img/thumb/TOMcatDSC01938_TP_V1.jpg">
           <p class="img-title">隠れるにゃんこ</p>
         </div>
