--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       - https://tsuyopon.xyz/learning-contents/web-dev/css/how-to-use-navbar-in-the-bootstrap-css-part-2/
   -->
   
-  <div class="img-gallery">
+  <div class="container img-gallery">
     <div class="row">
       <div class="px-5-12 col-sm-6 col-md-4 col-lg-3">
         <div class="img-thumbnail">
