second index.html commit

--- a/index.html
+++ b/index.html
@@ -80,31 +80,31 @@
   <div class="container img-gallery">
 
     <div class="row">
-      <div class="col-sm-6 col-md-4 col-lg-3 px-5 px-sm-2">
+      <div class="col-sm-6 col-md-4 col-lg-3 px-5 px-sm-2 mb-4">
        <div class="img-thumbnail">
         <img src="https://www.pakutaso.com/shared/img/thumb/TOMheuaDSC01992_TP_V1.jpg">
         <p class="img-title">へウーッ（猫）</p>
       </div>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3 px-5 px-sm-2">
+      <div class="col-sm-6 col-md-4 col-lg-3 px-5 px-sm-2 mb-4">
         <div class="img-thumbnail">
           <img src="https://www.pakutaso.com/shared/img/thumb/TOMnemuiDSC01757_TP_V1.jpg">
           <p class="img-title">今日も一日頑張ったにゃん</p>
         </div>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3 px-5 px-sm-2">
+      <div class="col-sm-6 col-md-4 col-lg-3 px-5 px-sm-2 mb-4">
         <div class="img-thumbnail">
           <img src="https://www.pakutaso.com/shared/img/thumb/TOMcatDSC02022_TP_V1.jpg">
           <p class="img-title">何か用ですか？（猫）</p>
         </div>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3 px-5 px-sm-2">
+      <div class="col-sm-6 col-md-4 col-lg-3 px-5 px-sm-2 mb-4">
         <div class="img-thumbnail">
           <img src="https://www.pakutaso.com/shared/img/thumb/TOMcatDSC02346_TP_V1.jpg">
           <p class="img-title">怖がる猫</p>
         </div>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3 px-5 px-sm-2">
+      <div class="col-sm-6 col-md-4 col-lg-3 px-5 px-sm-2 mb-4">
         <div class="img-thumbnail">
           <img src="https://www.pakutaso.com/shared/img/thumb/TOMcatDSC01994_TP_V1.jpg">
           <p class="img-title">猫の怒りのサイン</p>
