third index.html

--- a/index.html
+++ b/index.html
@@ -32,11 +32,9 @@
     参考:
       - https://tsuyopon.xyz/learning-contents/web-dev/css/how-to-use-navbar-in-the-bootstrap-css/
   -->
-  <nav class="navbar navbar-dark bg-danger">
-    <a class="navbar-brand" href="#">
-      マイアルバム
-    </a>
-    <button class="navbar-toggler" data-toggle="collapse" data-target=#navbarNav>
+  <nav class="navbar navbar-expand-sm navbar-dark bg-danger">
+    <a class="navbar-brand" href="#">マイアルバム</a>
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
